--- a/order-service/package.json
+++ b/order-service/package.json
@@ -1,1 +1,15 @@
-ÿþ
+{
+  "name": "order-service",
+  "version": "1.0.0",
+  "description": "Order service for the microservices e-commerce platform",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
+  "dependencies": {
+    "express": "^4.19.2"
+  },
+  "engines": {
+    "node": "18.x"
+  }
+}
