--- a/order-service/package.json
+++ b/order-service/package.json
@@ -4,7 +4,7 @@
   "description": "Order service for the microservices e-commerce platform",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.19.2"
