--- a/user-service/package.json
+++ b/user-service/package.json
@@ -7,9 +7,20 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.19.2"
+    "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "pg": "^8.12.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.3",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
+    "winston": "^3.14.2"
   },
   "engines": {
     "node": "18.x"
+  },
+  "devDependencies": {
+    "@types/sequelize": "^4.28.20"
   }
 }
