--- a/product-service/package.json
+++ b/product-service/package.json
@@ -3,11 +3,13 @@
   "version": "1.0.0",
   "description": "Product service for the microservices e-commerce platform",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "winston": "^3.14.2"
   },
   "engines": {
     "node": "18.x"
